# 5th-echelon

./: .gitignore  .rustfmt.toml  404.html  Cargo.toml  Cross.toml  README.md  book.toml  build_dissector.sh  gen-protos.sh  index.html  justfile  parse_pcap.sh  print.html  rust-toolchain.toml  searchindex.js  searchindex.json  service.toml
dedicated_server/: Cargo.toml  build.rs  service.toml
dedicated_server/config/: Cargo.toml
dedicated_server/config/src/: lib.rs
dedicated_server/sc_bl_protocols/: Cargo.toml
dedicated_server/sc_bl_protocols/src/: lib.rs
dedicated_server/sc_bl_protocols/src/protocols/: mod.rs
dedicated_server/sc_bl_protocols/src/protocols/account_management_service/: account_management_protocol.rs  mod.rs  types.rs
dedicated_server/sc_bl_protocols/src/protocols/authentication_foundation/: mod.rs  types.rs  (+1 more)
dedicated_server/src/: api.rs  challenge.rs  clan.rs  config.rs  game_session.rs  game_session_ex.rs  ladder.rs  lib.rs  locale.rs  main.rs  nat_traversal.rs  overlord_challenge.rs  overlord_core.rs  overlord_news.rs  player_stats.rs  privileges.rs  secure.rs  simple_http.rs  ticket.rs  tracking.rs  tracking_ext.rs  ubi_acc_mgmt.rs  uplay_win.rs  user_storage.rs
dedicated_server/src/protocols/: mod.rs
dedicated_server/src/protocols/account_management_service/: account_management_protocol.rs  mod.rs  types.rs
dedicated_server/src/protocols/authentication_foundation/: mod.rs  ticket_granting_protocol.rs
dedicated_server/src/protocols/challenge_helper_service/: challenge_helper_protocol.rs  mod.rs  types.rs
dedicated_server/src/protocols/clan_helper_service/: clan_helper_protocol.rs  mod.rs  types.rs
dedicated_server/src/protocols/friends_service/: friends_protocol.rs  mod.rs  types.rs
dedicated_server/src/protocols/game_session_ex_service/: game_session_ex_protocol.rs  mod.rs  types.rs
dedicated_server/src/protocols/game_session_service/: game_session_protocol.rs  mod.rs  types.rs
dedicated_server/src/protocols/health_service/: health_protocol.rs  mod.rs  monitoring_protocol.rs
dedicated_server/src/protocols/ladder_helper_service/: ladder_helper_protocol.rs  mod.rs
dedicated_server/src/protocols/localization_service/: localization_protocol.rs  mod.rs
dedicated_server/src/protocols/nat_traversal/: mod.rs  nat_traversal_protocol.rs
dedicated_server/src/protocols/news_service/: mod.rs  news_protocol.rs  types.rs
dedicated_server/src/protocols/offline_game_notifications_service/: mod.rs  offline_game_notifications_protocol.rs  types.rs
dedicated_server/src/protocols/player_stats_service/: mod.rs  player_stats_protocol.rs  types.rs
dedicated_server/src/protocols/privileges_service/: mod.rs  privileges_protocol.rs  types.rs
dedicated_server/src/protocols/protocol_foundation/: mod.rs  notification_protocol.rs  remote_log_device_protocol.rs  types.rs
dedicated_server/src/protocols/secure_connection_service/: mod.rs  secure_connection_protocol.rs  types.rs
dedicated_server/src/protocols/simple_authentication/: mod.rs  simple_authentication_protocol.rs  types.rs
dedicated_server/src/protocols/tracking_service/: mod.rs  tracking_protocol_3.rs  types.rs
dedicated_server/src/protocols/trackingextension/: mod.rs  tracking_extension_protocol.rs
dedicated_server/src/protocols/ubi_account_management_service/: mod.rs  types.rs  ubi_account_management_protocol.rs
dedicated_server/src/protocols/ubi_authentication/: types.rs
dedicated_server/src/protocols/uplay_win_service/: mod.rs  types.rs  uplay_win_protocol.rs
dedicated_server/src/protocols/user_account_management_service/: mod.rs  user_account_management_protocol.rs
dedicated_server/src/protocols/user_storage/: mod.rs  types.rs  user_storage_protocol.rs
dedicated_server/src/protocols/user_storage_admin/: mod.rs  types.rs  user_storage_admin_protocol.rs
dedicated_server/src/protocols/web_notifications_storage_service/: mod.rs  web_notifications_storage_protocol.rs
dedicated_server/src/storage/: mod.rs
dedicated_server/src/storage/migrations/: 20230917230530_init.sql  20231129203012_add_sample.sql  20231207005134_invites.sql  20231212002723_sessions.sql  20240108010100_user_logout.sql
hooks/: Cargo.toml  build.rs  maphashes.txt
hooks/hooks-addresses/: Cargo.toml
hooks/hooks-addresses/src/: lib.rs  patterns.rs
hooks/hooks-config/: Cargo.toml
hooks/hooks-config/src/: lib.rs  saves.rs
hooks/hooks-proc/: Cargo.toml
hooks/hooks-proc/src/: lib.rs
hooks/shim-gen/: Cargo.toml
hooks/shim-gen/src/: main.rs
hooks/src/: addresses.rs  api.rs  config.rs  dll_utils.rs  hooks.rs  lib.rs  macros.rs  overlay.rs  uplay_r1_loader.rs
hooks/src/dll_utils/: parse.rs
hooks/src/hooks/: datatypes.rs  quazal.rs  storm.rs  utils.rs
hooks/src/uplay_r1_loader/: ach.rs  avatar.rs  error.rs  friends.rs  overlay.rs  party.rs  presence.rs  save.rs  types.rs  user.rs  win.rs
launcher/: Cargo.toml  build.rs
launcher/fonts/: OFL.txt
launcher/src/: clipboard_win.rs  config.rs  dll_utils.rs  games.rs  logging.rs  main.rs  network.rs  registry.rs  render.rs  ui.rs  unix.rs  updater.rs  version.rs  windows.rs
launcher/src/dll_utils/: drop.rs  parse.rs
launcher/src/network/: discover.rs  quazal.rs  rpc.rs
launcher/src/ui/: icons.rs  new.rs  old.rs
launcher/src/ui/new/: base_savegame.xml  client.rs  colors.rs  main.rs  server.rs  settings.rs  themes.rs
quazal/: Cargo.toml
quazal-tools/: Cargo.toml
quazal-tools/src/: generate.rs  lib.rs  parse.rs
quazal/quazal-macros/: Cargo.toml
quazal/quazal-macros/src/: lib.rs  protocol.rs  stream.rs
quazal/src/: config.rs  errors.rs  kerberos.rs  lib.rs  old.rs  prudp.rs  rmc.rs
quazal/src/prudp/: packet.rs
quazal/src/rmc/: basic.rs  protocols.rs  result.rs  types.rs
quazal/src/rmc/protocols/: ticket_granting_protocol.rs
tools/quazal-tools/: Cargo.toml
tools/quazal-tools/quazal-tools-macros/: Cargo.toml
tools/quazal-tools/quazal-tools-macros/src/: lib.rs
tools/quazal-tools/src/: generate.rs  lib.rs  parse.rs
tools/umd_browser/: Cargo.toml
tools/umd_browser/src/: logging.rs  main.rs  render.rs
(+231 files in other folders)
