[workspace]
members = [
  "api",
  "dedicated_server",
  "hooks",
  "hooks/hooks-proc",
  "hooks/shim-gen",
  "quazal-macros",
  "quazal",
  "tools/quazal-tools-macros",
  "tools/quazal-tools",
  # "tools/wireshark-dissector",
]
# v2 panics with
# activated_features for invalid package: features did not find PackageId { name: "windows_i686_msvc", version: "0.48.0", source: "registry `crates-io`" } NormalOrDev
resolver = "1"
