[workspace]
members = [
  "api",
  "dedicated_server",
  "dedicated_server/sc_bl_protocols",
  "hooks",
  "hooks/hooks-addresses",
  "hooks/hooks-proc",
  "hooks/hooks-config",
  "hooks/shim-gen",
  "quazal",
  "quazal/quazal-macros",
  "tools/quazal-tools",
  "tools/quazal-tools/quazal-tools-macros",
  "tools/storm_parser",
  # "tools/wireshark-dissector",
  "launcher",
  "tools/umd_browser",
]
# v2 panics with
# activated_features for invalid package: features did not find PackageId { name: "windows_i686_msvc", version: "0.48.0", source: "registry `crates-io`" } NormalOrDev
resolver = "1"

[patch.'crates-io']
# TODO: remove this once the fix to imgui-rs/imgui-rs#775 gets released.
imgui = { git = "https://github.com/imgui-rs/imgui-rs", rev = "cb8beeb" }

[profile.release]
strip = true
lto = "fat"

[workspace.dependencies]
anyhow = "1.0"
argh = "0.1"
argon2 = "0.5"
bindgen = "0.71"
brotli = { version = "7.0" }
byteorder = "1.5"
clap = "~2.33.0"
color-eyre = "0.6"
const-cstr = "0.3"
convert_case = "0.8"
crossbeam-channel = "0.5"
derive_more = "2.0"
diff = "0.1"
enumflags2 = "0.7"
etherparse = "0.17"
eyre = "0.6"
glow = "0.14.2" # imgui-glow-renderer
glutin = "0.32"
glutin-winit = "0.5"
goblin = { version = "0.9", default-features = false, features = [
  "pe32",
  "pe64",
  "std",
] }
hmac = "0.12"
iced-x86 = "1.21"
image = { version = "0.25", default-features = false, features = ["png"] }
imgui = "0.12"
imgui-glow-renderer = "0.13"
imgui-winit-support = "0.13"
json = "0.12.4"
lazy_static = "1.4"
libc = "0.2"
md-5 = "0.10"
miniz_oxide = "0.8"
nom = "7.1"
num_enum = "0.7"
num-traits = "0.2"
pcap-parser = { version = "0.16", features = ["data"] }
pkg-config = "0.3"
proc-macro-crate = "3.1"
proc-macro2 = "1.0"
prost = "0.13"
quote = "1.0"
rand = "0.9"
raw-window-handle = "0.6" # winit
region = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
slog = { version = "2.7", features = ["max_level_trace"] }
sloggers = { version = "2.0", features = ["json"] }
sodiumoxide = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
syn = "2.0"
thiserror = "2.0"
tokio = { version = "1.36", features = ["rt-multi-thread"] }
toml = "0.8"
tonic = "0.12" # tonic-async-interceptor
tonic-async-interceptor = "0.12"
tonic-build = "0.12"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
winres = "0.1.12"
flate2 = "1.0"
