[package]
name = "dedicated_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "dedicated_server"

[features]
tracking = []

[dependencies]
argh = "0.1"
argon2 = "0.5"
byteorder = "1.4"
color-eyre = "0.6"
eyre = "0.6"
hmac = "0.12"
md-5 = "0.10"
num_enum = "0.7"
quazal = { path = "../quazal" }
quazal-macros = { path = "../quazal/quazal-macros" }
rand = "0.8"
sc_bl_protocols = { path = "./sc_bl_protocols" }
serde = "1.0"
server_api = { path = "../api", package = "api" }
slog = { version = "2.7", features = ["max_level_trace"] }
sloggers = { version = "2.0", features = ["json"] }
sodiumoxide = "0.2"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml = { workspace = true }
tonic = { workspace = true }
tonic-async-interceptor = "0.10"

[dev-dependencies]
diff = "0.1"
