[package]
name = "dedicated_server"
version = "0.1.0"
edition = "2021"

default-run = "dedicated_server"

[features]
tracking = []

[dependencies]
argh = { workspace = true }
argon2 = { workspace = true }
byteorder = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
num_enum = { workspace = true }
quazal = { path = "../quazal" }
quazal-macros = { path = "../quazal/quazal-macros" }
rand = { workspace = true }
sc_bl_protocols = { path = "./sc_bl_protocols" }
serde = { workspace = true }
serde_json = { workspace = true }
server_api = { path = "../api", package = "api" }
slog = { workspace = true, features = ["max_level_trace"] }
sloggers = { workspace = true, features = ["json"] }
sodiumoxide = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml = { workspace = true }
tonic = { workspace = true }
tonic-async-interceptor = { workspace = true }

[dev-dependencies]
diff = { workspace = true }
