cargo-features = ["per-package-target"]

[package]
name = "hooks"
version = "0.1.0"
edition = "2021"
# forced-target = "i686-pc-windows-gnu"
forced-target = "i686-pc-windows-msvc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[[bin]]
name = "hook-loader"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
hooks-addresses = { path = "hooks-addresses" }
hooks-config = { path = "hooks-config" }
hooks-proc = { path = "hooks-proc" }
imgui = "0.12"
region = "3.0"
serde = { version = "1.0", features = ["derive"] }
server_api = { path = "../api", package = "api" }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml = { workspace = true }
tonic = { workspace = true }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
dll-syringe = "0.15"
retour = { version = "0.3", features = ["thiscall-abi", "static-detour"] }

[target.'cfg(target_os = "windows")'.dependencies.hudhook]
version = "0.7"
default-features = false
features = ["dx9", "dx11"]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.54.0" # hudhook
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Environment",
    "Win32_UI_Shell",
    "Win32_Networking",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_IpHelper",
]

[build-dependencies]
winres = "0.1.12"
