cargo-features = ["per-package-target"]

[package]
name = "hooks"
version = "0.1.1"
edition = "2021"
forced-target = "i686-pc-windows-msvc"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "hook-loader"

[features]
forward_calls = []

[dependencies]
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
hooks-addresses = { path = "hooks-addresses" }
hooks-config = { path = "hooks-config" }
hooks-proc = { path = "hooks-proc" }
imgui = { workspace = true }
region = { workspace = true }
serde = { workspace = true, features = ["derive"] }
server_api = { path = "../api", package = "api" }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
dll-syringe = "0.15"
retour = { version = "0.3", features = ["thiscall-abi", "static-detour"] }

[target.'cfg(target_os = "windows")'.dependencies.hudhook]
version = "0.7"
default-features = false
features = ["dx9", "dx11"]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.54.0" # hudhook
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Environment",
    "Win32_UI_Shell",
    "Win32_Networking",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_IpHelper",
]

[build-dependencies]
winres = { workspace = true }
