[package]
name = "launcher"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
embed-dll = ["brotli"]
GetAdapterInfos = []

[dependencies]
anyhow = { workspace = true }
brotli = { workspace = true, optional = true }
glow = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
hooks-addresses = { path = "../hooks/hooks-addresses" }
hooks-config = { path = "../hooks/hooks-config" }
imgui = { workspace = true }
imgui-glow-renderer = { workspace = true }
imgui-winit-support = { workspace = true }
libc = { workspace = true }
raw-window-handle = { workspace = true }
toml = { workspace = true }
server_api = { path = "../api", package = "api" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["rt"] }
tonic = { workspace = true }
goblin = { workspace = true, default-features = false, features = [
    "pe32",
    "pe64",
    "std",
] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.54.0" # hudhook
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
brotli = { workspace = true }
json = { workspace = true }
winres = { workspace = true }
image = { workspace = true, default-features = false, features = ["png"] }
goblin = { workspace = true, default-features = false, features = [
    "pe32",
    "pe64",
    "std",
] }
