[package]
name = "dedicated_server_config"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
color-eyre = { workspace = true }
eyre = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

quazal = { path = "../../quazal" }
