[package]
name = "hooks-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
GetAdapterInfos = []

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.51.1" # hudhook
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_WindowsAndMessaging",
]
