[package]
name = "hooks-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
GetAdapterInfos = []
modding = []

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.51.1" # hudhook
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_WindowsAndMessaging",
]
