[package]
name = "quazal-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.1"

[dev-dependencies]
quazal = { path = "../" }
