[package]
name = "quazal-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
verbose_errors = []

[dependencies]
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "~2.33.0"
byteorder = "1.5"
quazal-tools-macros = { path = "./quazal-tools-macros" }
convert_case = "0.6"
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
pcap-parser = { version = "0.14", features = ["data"] }
etherparse = "0.13"
quazal = { path = "../../quazal" }
